--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,16 @@
 # Dependencies
-node_modules
+node_modules/
+backend/node_modules/
 
-# Build outputs
-dist
-build
+# Build
+dist/
+build/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Cache
+.vite/
+*.log
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# OneDrive optimization
+*.tmp
+~$*
