--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mssql": "^10.0.4"
+    "jsonwebtoken": "^9.0.0",
+    "sqlite3": "^5.1.6"
   }
 }
