--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,12 @@
-// Exemplo de configuração de ambiente para o backend Cedro
-DB_USER=SEU_USUARIO
-DB_PASSWORD=SUA_SENHA
+# Configuração do SQL Server
+DB_USER=sa
+DB_PASSWORD=SUA_SENHA_AQUI
 DB_SERVER=localhost
-DB_DATABASE=CEDRO
+DB_NAME=CEDRO_banco
 DB_PORT=1433
+
+# JWT
 JWT_SECRET=seu_jwt_secret_muito_seguro_aqui
+
+# Servidor
 PORT=3001
