--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "init-db": "node init-database.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -12,6 +13,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "sqlite3": "^5.1.6"
+    "mssql": "^10.0.1"
   }
 }
