--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,12 @@
-# Configuração do SQL Server
-DB_USER=sa
-DB_PASSWORD=SUA_SENHA_AQUI
-DB_SERVER=localhost
-DB_NAME=CEDRO_banco
+# Configurações do Banco de Dados
+DB_USER=seu_usuario_aqui
+DB_PASSWORD=sua_senha_aqui
+DB_SERVER=seu_servidor_aqui
+DB_NAME=nome_do_banco
 DB_PORT=1433
 
-# JWT
-JWT_SECRET=seu_jwt_secret_muito_seguro_aqui
+# JWT Secret (use uma chave forte em produção)
+JWT_SECRET=sua_chave_jwt_super_secreta_aqui
 
-# Servidor
+# Porta do servidor
 PORT=3001
