--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,49 @@
 node_modules/
 backend/node_modules/
 
-# Build
+# Production builds
 dist/
 build/
 
-# Cache
-.vite/
-*.log
-.DS_Store
+# Environment variables
+.env
+backend/.env
 
-# OneDrive optimization
-*.tmp
-~$*
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+tmp/
+temp/
