--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "dev:full": "concurrently \"npm run backend\" \"npm run dev\"",
+    "full": "concurrently \"npm run backend\" \"npm run dev\"",
     "backend": "cd backend && npm start"
   },
   "dependencies": {
