Remove sensitive credentials from .env and add .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,12 @@
-# Configurações do Banco de Dados
-DB_USER=seu_usuario_aqui
-DB_PASSWORD=sua_senha_aqui
-DB_SERVER=seu_servidor_aqui
-DB_NAME=nome_do_banco
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_SERVER=your_db_server
+DB_NAME=your_db_name
 DB_PORT=1433
-
-# JWT Secret (use uma chave forte em produção)
-JWT_SECRET=sua_chave_jwt_super_secreta_aqui
-
-# Porta do servidor
+JWT_SECRET=your_jwt_secret_here
 PORT=3001
+ADMIN_EMAILS=admin1@example.com,admin2@example.com
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
