Add Netlify domain to CORS

--- a/backend/cedro-backend/src/main/resources/application.properties
+++ b/backend/cedro-backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.com.cedro=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # CORS
-cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000}
+cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,https://cedro-apoio.netlify.app}
 
 # Google OAuth
 google.client.id=${GOOGLE_CLIENT_ID}
