--- a/backend/cedro-backend/src/main/resources/application.properties
+++ b/backend/cedro-backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
+# suppress inspection "SpringBootApplicationProperties" for whole file
 spring.application.name=cedro-backend
 
 # Database
 spring.datasource.url=jdbc:sqlserver://${DB_SERVER:Cedro_banco.mssql.somee.com};databaseName=${DB_NAME:Cedro_banco};encrypt=true;trustServerCertificate=true
-spring.datasource.username=${DB_USER:sa}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=${DB_USER:Exodia_SQLLogin_1}
+spring.datasource.password=${DB_PASSWORD:9s16ahvvlw}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA
