--- a/backend/cedro-backend/src/main/resources/application.properties
+++ b/backend/cedro-backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=cedro-backend
 
 # Database
-spring.datasource.url=jdbc:sqlserver://${DB_SERVER:Cedro_banco.mssql.somee.com};databaseName=${DB_NAME:Cedro_banco};encrypt=true;trustServerCertificate=true
-spring.datasource.username=${DB_USER:Exodia_SQLLogin_1}
-spring.datasource.password=${DB_PASSWORD:9s16ahvvlw}
+spring.datasource.url=jdbc:sqlserver://Cedro_banco.mssql.somee.com;databaseName=Cedro_banco;encrypt=true;trustServerCertificate=true
+spring.datasource.username=Exodia_SQLLogin_1
+spring.datasource.password=9s16ahvvlw
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA
@@ -14,7 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
-jwt.secret=${JWT_SECRET:change_this_secret_key_in_production}
+jwt.secret=cedro_jwt_secret_key_2024_production_secure_min_32_chars
 jwt.expiration=86400000
 
 # Server
