fix: correções de bugs e melhorias - exclusão de conta, perfil psicólogo, ajustes de campos e cores

--- a/backend/cedro-backend/src/main/resources/application.properties
+++ b/backend/cedro-backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ logging.level.com.cedro=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # CORS
-cors.allowed-origins=http://localhost:3000,https://cedro-eight.vercel.app/
+cors.allowed-origins=http://localhost:3000,https://cedro-eight.vercel.app
 
 # Google OAuth
 google.client.id=${GOOGLE_CLIENT_ID}
