segurança, CORS, 404, env vars

--- a/backend/cedro-backend/src/main/resources/application.properties
+++ b/backend/cedro-backend/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-# suppress inspection "SpringBootApplicationProperties" for whole file
 spring.application.name=cedro-backend
 
 # Database
-spring.datasource.url=jdbc:sqlserver://Cedro_banco.mssql.somee.com;databaseName=Cedro_banco;encrypt=true;trustServerCertificate=true
-spring.datasource.username=Exodia_SQLLogin_1
-spring.datasource.password=9s16ahvvlw
+spring.datasource.url=${DATABASE_URL:jdbc:sqlserver://Cedro_banco.mssql.somee.com;databaseName=Cedro_banco;encrypt=true;trustServerCertificate=true}
+spring.datasource.username=${DATABASE_USERNAME:Exodia_SQLLogin_1}
+spring.datasource.password=${DATABASE_PASSWORD:9s16ahvvlw}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA
@@ -14,7 +13,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT
+# noinspection SpringBootApplicationProperties
 jwt.secret=cedro_jwt_secret_key_2024_production_secure_min_32_chars
+# noinspection SpringBootApplicationProperties
 jwt.expiration=86400000
 
 # Server
@@ -25,8 +26,11 @@ logging.level.com.cedro=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 # CORS
+# noinspection SpringBootApplicationProperties
 cors.allowed-origins=http://localhost:3000,https://cedro-eight.vercel.app
 
 # Google OAuth
+# noinspection SpringBootApplicationProperties
 google.client.id=${GOOGLE_CLIENT_ID}
+# noinspection SpringBootApplicationProperties
 google.client.secret=${GOOGLE_CLIENT_SECRET}
