--- a/backend/cedro-backend/pom.xml
+++ b/backend/cedro-backend/pom.xml
@@ -12,20 +12,7 @@
 	<artifactId>cedro-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cedro-backend</name>
-	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<description>Cedro Backend API</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
